--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Polkadot Hausa - Shiga Duniya Web3 da Polkadot</title>
+    <title>Polkadot Hausa - Shiga Duniyar Blockchain da Polkadot</title>
     <meta name="description" content="Join the largest Hausa blockchain community in Africa. Learn blockchain technology, participate in the Polkadot ecosystem, and build the future of decentralized finance with your community." />
     <meta name="keywords" content="Polkadot, Blockchain, Hausa, Web3, Nigeria, Africa, Cryptocurrency, DeFi, Education" />
     <meta property="og:title" content="Polkadot Hausa - Shiga Duniya Web3 da Polkadot" />
