--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polkadot Hausa - Shiga Duniyar Blockchain da Polkadot</title>
     <meta name="description" content="Join the largest Hausa blockchain community in Africa. Learn blockchain technology, participate in the Polkadot ecosystem, and build the future of decentralized finance with your community." />
